tdf#89394. fix hangs because of unavailable Windows UNC path.

UNC: \\server.domain\file.odt is stored as file://server.domain/file.odt.
Windows local: C:\folder\file.odt is stored as file:///C:/folder/file.odt.
Linux: /home/user/file.odt is stored as file:///home/user/file.odt.

I cannot find any case where we only have file:// (but not a third slash) on
a local file.

Change-Id: Ib15b3380cb40f1cd37123be7a38426b74fbde5cf